--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "decap-cms-media-library-cloudinary": "^3.0.2",
     "decap-cms-media-library-uploadcare": "^3.0.1",
     "gatsby": "^5.13.3",
+    "gatsby-link": "^5.13.1",
     "gatsby-plugin-decap-cms": "^4.0.4",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-netlify": "^5.1.1",
